# palette_extractor_ffi

./: README.md  pubspec.yaml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bindings.dart  main.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/: libpalette_extractor.dylib
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
plugins/cpp/: .metadata  README.md  ffigen.yaml  pubspec.yaml
plugins/cpp/example/: README.md  pubspec.yaml
plugins/cpp/hook/: build.dart
plugins/cpp/lib/: cpp_bindings_generated.dart
plugins/cpp/src/: palette_extractor.cpp  palette_extractor.h
plugins/rust/: README.md  ffigen.yaml  pubspec.yaml
plugins/rust/example/: README.md  pubspec.yaml
plugins/rust/hook/: build.dart
plugins/rust/lib/: rust_bindings_generated.dart
plugins/rust/src/: palette_extractor.c  palette_extractor.h
plugins/rust_plugin/: README.md  ffigen.yaml  pubspec.yaml
plugins/rust_plugin/android/: build.gradle
plugins/rust_plugin/ios/: rust_plugin.podspec
plugins/rust_plugin/lib/: rust_plugin.dart  rust_plugin_bindings_generated.dart
plugins/rust_plugin/linux/: CMakeLists.txt
plugins/rust_plugin/src/: CMakeLists.txt  rust_plugin.c
plugins/rust_plugin/src/palette_extractor/: Cargo.toml  ffi_gen.h
plugins/rust_plugin/src/palette_extractor/src/: lib.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+39 files in other folders)
